Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.3.0
-
None
-
impalad version 2.3.0-cdh5.5.0 DEBUG (build dff9ea16a211e1dd069039d2c7e769391223ca2f)
Built on Wed, 21 Oct 2015 22:01:51 PST
Description
A stress test found a query that triggers a dcheck. I was able to repro on the first attempt, no mem limit was needed.
WITH with_1 AS (SELECT COALESCE(t1.char0164_col_9, t1.string_col_4) AS char_col, (170) - (IF(True, MAX(t2.bigint_col_2), 966)) AS int_col FROM table_5 t1 LEFT JOIN table_23 t2 ON ((t2.int_col_1) = (t1.bigint_col_11)) AND ((t2.bigint_col_2) = (t1.tinyint_col_12)) WHERE (t1.bigint_col_13) NOT IN (t1.int_col_10, t1.bigint_col_13) GROUP BY COALESCE(t1.char0164_col_9, t1.string_col_4)) SELECT (-972) IN (COUNT(t2.smallint_col_6), 39) AS boolean_col FROM table_7 t1 LEFT JOIN table_13 t2 ON ((t2.tinyint_col_7) = (t1.smallint_col_2)) AND ((t2.char0132_col_11) = (t1.char0172_col_6))
Crash info
16:26:56 impala-stress-random-3.vpc.cloudera.com crashed: 16:26:56 F1029 16:23:57.933728 20851 free-pool.h:75] Check failed: allocation != __null 16:26:56 [...skipped...] 16:26:56 #6 0x000000000205dd2d in google::LogMessageFatal::~LogMessageFatal (this=0x7f59e34c73c0, __in_chrg=<value optimized out>) at src/logging.cc:1836 16:26:56 #7 0x000000000139ffbf in impala::FreePool::Allocate (this=0x1a1626c0, size=256) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/runtime/free-pool.h:75 16:26:56 #8 0x000000000139f273 in impala::FunctionContextImpl::AllocateLocal (this=0x81eed80, byte_size=172) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/udf/udf.cc:396 16:26:56 #9 0x000000000102faf1 in impala::CastFunctions::CastToChar (ctx=0x6be0218, val=...) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exprs/cast-functions.cc:176 16:26:56 #10 0x0000000000fede74 in impala::ScalarFnCall::InterpretEval<impala_udf::StringVal> (this=0x4c5fe00, context=0x9571b00, row=0x37d588a8) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exprs/scalar-fn-call.cc:541 16:26:56 #11 0x0000000000fe69bc in impala::ScalarFnCall::GetStringVal (this=0x4c5fe00, context=0x9571b00, row=0x37d588a8) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exprs/scalar-fn-call.cc:727 16:26:56 #12 0x0000000000f6c347 in impala::ExprContext::GetValue (this=0x9571b00, e=0x4c5fe00, row=0x37d588a8) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exprs/expr-context.cc:259 16:26:56 #13 0x0000000000f6bee3 in impala::ExprContext::GetValue (this=0x9571b00, row=0x37d588a8) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exprs/expr-context.cc:203 16:26:56 #14 0x00000000016d2779 in impala::HashTableCtx::Equals (this=0x6293960, build_row=0x37d588a8) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/hash-table.cc:174 16:26:56 #15 0x000000000167d1a3 in impala::HashTable::Probe (this=0x7904e40, buckets=0x373be000, num_buckets=524288, ht_ctx=0x6293960, hash=751187485, found=0x7f59e34c7abf) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/hash-table.inline.h:52 16:26:56 #16 0x000000000167d3ec in impala::HashTable::InsertInternal (this=0x7904e40, ht_ctx=0x6293960, hash=751187485) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/hash-table.inline.h:81 16:26:56 #17 0x000000000167d5bf in impala::HashTable::Insert (this=0x7904e40, ht_ctx=0x6293960, tuple=0x17685edc, hash=751187485) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/hash-table.inline.h:108 16:26:56 #18 0x0000000001690305 in impala::HashTable::Insert (this=0x7904e40, ht_ctx=0x6293960, idx=..., row=0x159886f8, hash=751187485) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/hash-table.inline.h:96 16:26:56 #19 0x00000000016924dd in impala::PartitionedHashJoinNode::Partition::BuildHashTableInternal<false> (this=0x74f81b0, state=0x6ce0000, built=0x7f59e34c7fdd) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/partitioned-hash-join-node.cc:416 16:26:56 #20 0x00000000016835ea in impala::PartitionedHashJoinNode::Partition::BuildHashTable (this=0x74f81b0, state=0x6ce0000, built=0x7f59e34c7fdd, add_probe_filters=false) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/partitioned-hash-join-node.cc:362 16:26:56 #21 0x000000000168ae32 in impala::PartitionedHashJoinNode::BuildHashTables (this=0x14eab200, state=0x6ce0000) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/partitioned-hash-join-node.cc:1203 16:26:56 #22 0x0000000001685c0d in impala::PartitionedHashJoinNode::ProcessBuildInput (this=0x14eab200, state=0x6ce0000, level=0) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/partitioned-hash-join-node.cc:675 16:26:56 #23 0x00000000016846f4 in impala::PartitionedHashJoinNode::ConstructBuildSide (this=0x14eab200, state=0x6ce0000) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/partitioned-hash-join-node.cc:580 16:26:56 #24 0x00000000016c720b in impala::BlockingJoinNode::BuildSideThread (this=0x14eab200, state=0x6ce0000, status=0x7f59e3ec8830) at /usr/src/debug/impala-2.3.0-cdh5.5.0/be/src/exec/blocking-join-node.cc:143 16:26:56 #25 0x00000000016c99f8 in boost::_mfi::mf2<void, impala::BlockingJoinNode, impala::RuntimeState*, impala::Promise<impala::Status>*>::operator() (this=0x826eb40, p=0x14eab200, a1=0x6ce0000, a2=0x7f59e3ec8830) at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/mem_fn_template.hpp:280 16:26:56 #26 0x00000000016c9896 in boost::_bi::list3<boost::_bi::value<impala::BlockingJoinNode*>, boost::_bi::value<impala::RuntimeState*>, boost::_bi::value<impala::Promise<impala::Status>*> >::operator()<boost::_mfi::mf2<void, impala::BlockingJoinNode, impala::RuntimeState*, impala::Promise<impala::Status>*>, boost::_bi::list0> (this=0x826eb50, f=..., a=...) at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/bind.hpp:392 16:26:56 #27 0x00000000016c95c7 in boost::_bi::bind_t<void, boost::_mfi::mf2<void, impala::BlockingJoinNode, impala::RuntimeState*, impala::Promise<impala::Status>*>, boost::_bi::list3<boost::_bi::value<impala::BlockingJoinNode*>, boost::_bi::value<impala::RuntimeState*>, boost::_bi::value<impala::Promise<impala::Status>*> > >::operator() (this=0x826eb40) at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/bind_template.hpp:20